app-test.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lab
---
apiVersion: v1
kind: Service
metadata:
  name: deathstar
  namespace: lab
  labels:
    app.kubernetes.io/name: deathstar
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    org: empire
    class: deathstar
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deathstar
  namespace: lab
  labels:
    app.kubernetes.io/name: deathstar
spec:
  replicas: 2
  selector:
    matchLabels:
      org: empire
      class: deathstar
  template:
    metadata:
      labels:
        org: empire
        class: deathstar
    spec:
      containers:
      - name: deathstar
        image: docker.io/cilium/starwars
---
apiVersion: v1
kind: Pod
metadata:
  name: xwing
  namespace: lab
  labels:
    org: alliance
    class: xwing
spec:
  containers:
  - name: xwing
    image: docker.io/cilium/starwars
